--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -85,7 +85,6 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
   labs(x = "Samples", y = "Taxa")
 ```
 
-
 _pheatmap_ is a package that provides methods to plot clustered heatmaps. 
 
 ```{r pheatmap1}
@@ -114,8 +113,7 @@ mat <- assay(tse_phylum_subset, "clr_z")
 pheatmap(mat)
 ```
 
-We can create clusters by hierarchical clustering and 
-visualize them with dendrogram.
+We can create clusters by hierarchical clustering and add them to the plot.
 
 ```{r pheatmap2}
 # Hierarchical clustering
@@ -225,7 +223,6 @@ pheatmap(mat, annotation_row = taxa_clusters,
 
 In addition to _pheatmap_ package, there are also other packages that
 provide functions for more complex heatmaps, such as [_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html).
-
 
 It is also possible to create similar heatmap by just using _ggplot2_.
 
@@ -355,8 +352,8 @@ plot <- row_annotation + sample_clusters_annotation + sample_types_annotation + 
                 # Then you need to make column/row larger.
                 
                 # Relative widths and heights of each column and row:
-                # Currently, the width of the first column is 15 % and the height of the 
-                # first row is 25 % the size of others
+                # Currently, the width of the first column is 15 % and the height of
+                # first two rows are 30 % the size of others
                 
                 # To get this work most of the times, you can adjust all sizes to be 1, i.e. equal, 
                 # but then the gaps between plots are larger.
@@ -366,7 +363,6 @@ plot <- row_annotation + sample_clusters_annotation + sample_types_annotation + 
 plot
 
 ```
-
 
 ```{r more_complex_heatmap7}
 # Create layout
@@ -396,7 +392,6 @@ plot <- taxa_tree +
 
 plot
 ```
-
 
 # Community typing {#community-typing}
 
