--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -18,7 +18,7 @@ general method. In this section, we show three different cases and example
 solutions to apply biclustering to them. 
 
 1.   Taxa vs samples
-2.   Taxa vs biomolecule/biomarker...
+2.   Taxa vs biomolecule/biomarker
 3.   Taxa vs taxa
 
 Biclusters can be visualized using heatmap or boxplot, for instance. For checking purposes, 
@@ -245,7 +245,7 @@ additional cluster for features/samples that are not assigned into any cluster.
   }
   # Adjust row and column names
   rownames(bc_clusters) <- names
-  colnames(bc_clusters) <- paste("cluster_", 1:ncol(bc_clusters))
+  colnames(bc_clusters) <- paste0("cluster_", 1:ncol(bc_clusters))
   return(bc_clusters)
 }
 ```
@@ -295,7 +295,7 @@ col_biclust_info
 row_biclust_info 
 ```
 
-Now we can create a scatter plot to check if clusters really differs from each others.
+Now we can create a scatter plot to check if clusters differs from each others.
 
 ```{r biclust_7}
 df <- cbind(col_biclust_info[, "sum"], row_biclust_info[, "sum"])
