--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -109,7 +109,7 @@ pheatmap(assay(mae[[1]], "clr_z"), cluster_rows = F, cluster_cols = F,
 
 ```
 
-Other common plot is boxplot. 
+Another common plot is a boxplot. 
 
 ```{r cobiclust_4}
 if(!require(ggplot2)){
@@ -146,11 +146,10 @@ corr <- getExperimentCrossCorrelation(mae, 1, 2,
                                       abund_values2 = "nmr", 
                                       mode = "matrix", 
                                       cor_threshold = 0.2)
-# Show first three correlations
-corr[1:3, 1:3]
+
 ```
 
-_biclust_ takes correlation matrix as an input and returns _biclust_ object. 
+_biclust_ takes matrix as an input and returns _biclust_ object. 
 
 ```{r biclust_2}
 # Load package
@@ -234,6 +233,8 @@ bicluster_columns <- bcs$bc_columns
 # Print biclusters for rows
 head(bicluster_rows)
 ```
+
+Let's collect information for the scatter plot. 
 
 ```{r biclust_5}
 # Function for obtaining sample-wise sum, mean, median, and mean variance for each cluster
