--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -245,6 +245,7 @@ sechm(tse_phylum_subset,
       assayName = "clr", 
       do.scale = TRUE, 
       top_annotation = c("SampleType"), 
+      gaps_at = "SampleType",
       cluster_cols = TRUE, cluster_rows = TRUE)
 ```
 
