Revert "Use internal cross reference"
This reverts commit 9cd83f9b8b686cfcd96b00144ea22336fb975780.

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -405,7 +405,7 @@ appropriate choice for comparing community compositions.
 
  - [How to extract information from clusters](http://bioconductor.org/books/release/OSCA/clustering.html)
 
- - Chapter \@ref(community-typing) on community typing
+ - [Community typing](15-microbiome-community.md)
 
 
 ## Session Info {-}
