Minor change (name for chunk)

--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -229,7 +229,7 @@ and
 [sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
 package provides wrapper for _ComplexHeatmap_.
 
-```{r}
+```{r sechm}
 if(!require(sechm)){
   BiocManager::install("sechm")
   library(sechm)
