Bicluster chapter fix

--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -323,7 +323,7 @@ pheatmap(corr, cluster_cols = F, cluster_rows = F,
          annotation_colors = annotation_colors)
 ```
 
-# Taxa vs taxa
+## Taxa vs taxa
 
 Third and final example deals with situation where we want to analyze correlation
 between taxa. _biclust_ is suitable for this. 
