--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -299,7 +299,9 @@ In addition, data can be rarefied with [subsampleCounts](https://microbiome.gith
 
 Samples might be contaminated with exogenous sequences. The impact of each contaminant can be estimated based on their frequencies and concentrations across the samples.
 
-The [decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html) support such functionality. 
+The following [decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html) support such functionality:
+* isContaminant, isNotContaminant
+* addContaminantQC, addNotContaminantQC
 
 
 ## Session Info {-}
