Community typing chapter numbering fix

--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -429,7 +429,7 @@ if(!require(ecodist)){
 
 
 
-### Dirichlet Multinomial Mixtures (DMM)
+## Dirichlet Multinomial Mixtures (DMM)
 
 This section focus on DMM analysis. 
 
@@ -482,6 +482,7 @@ Return the model that has the best fit.
 ```{r}
 getBestDMNFit(tse_dmn, type = "laplace")
 ```
+
 ### PCoA for ASV-level data with Bray-Curtis; with DMM clusters shown with colors
 
 Group samples and return DMNGroup object that contains a summary.
