Mention minor functions in various chapters

--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -138,7 +138,10 @@ whether `as_relative` is set `TRUE` or `FALSE`
 
 TODO
 See also related functions for the analysis of rare and variable taxa
-(rareMembers; rareAbundance; lowAbundance). 
+(rareMembers; rareAbundance; lowAbundance).
+
+Additional functions are available for abundance evaluation of prevalent taxa (getPrevalentAbundance) and analysis focused on rare taxa (getRareTaxa, subsetByRareTaxa).
+
 
 ### Plotting prevalence
 
@@ -198,9 +201,6 @@ plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
             tip_colour_by = "prevalence",
             node_colour_by = "prevalence")
 ```
-
-
-
 
 
 ## Quality control
