--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -289,3 +289,7 @@ tse_genus_sub <- tse_genus_sub[rowSums(assay(tse_genus_sub, "counts")) > 0, ]
 
 tse_genus_sub
 ```
+
+### Additional functions
+* [mapTaxonomy](https://microbiome.github.io/mia/reference/taxonomy-methods.html)
+* [mergeRows/mergeCols](https://microbiome.github.io/mia/reference/merge-methods.html)
