--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -108,6 +108,13 @@ To apply the loop resolving function `resolveLoop` from the
 `TreeSummarizedExperiment` package [@R-TreeSummarizedExperiment] within
 `getTaxonomyLabels`, set `resolve_loops = TRUE`.
 
+The function `getUniqueTaxa` gives a list of unique taxa for the specified taxonomic rank.
+
+```{r}
+head(getUniqueTaxa(tse, rank = "Phylum"))
+```
+
+
 ### Generate a taxonomic tree on the fly
 
 To create a taxonomic tree, `taxonomyTree` used the information and returns a
