--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -67,14 +67,14 @@ library(miaViz)
 plotDMNFit(tse_dmn, type = "laplace")
 ```
 
-Return the model that has the best fit.
+Return the model that has the best fit (see also `BestDMNFit`, which returns the index of the best fit).
 
 ```{r}
 getBestDMNFit(tse_dmn, type = "laplace")
 ```
 ### PCoA for ASV-level data with Bray-Curtis; with DMM clusters shown with colors
 
-Group samples and return DMNGroup object that contains a summary.
+Group samples and return DMNGroup object that contains a summary (see also `performDMNgroupCV`, which returns an equivalent data.frame).
 Patient status is used for grouping.
 
 ```{r}
