--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -199,6 +199,17 @@ tse <- mia::estimateDiversity(tse,
 head(colData(tse)$log_modulo_skewness)
 ```
 
+### Divergence
+
+Divergence can be evaluated with `estimateDivergence`. Reference and algorithm for the calculation of divergence can be specified as `reference` and `FUN`, respectively. 
+
+```{r}
+tse <- mia::estimateDivergence(tse,
+                               abund_values = "counts",
+                               reference = "median",
+                               FUN = vegan::vegdist)
+```
+
 
 ## Visualization
 
