Add code highlights

--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -137,10 +137,9 @@ Note that the `detection` and `prevalence` thresholds are not the same, since
 whether `as_relative` is set `TRUE` or `FALSE`
 
 TODO
-See also related functions for the analysis of rare and variable taxa
-(rareMembers; rareAbundance; lowAbundance).
+See also related functions for the analysis of rare and variable taxa (`rareMembers`; `rareAbundance`; `lowAbundance`).
 
-Additional functions are available for abundance evaluation of prevalent taxa (getPrevalentAbundance) and analysis focused on rare taxa (getRareTaxa, subsetByRareTaxa).
+Additional functions are available for abundance evaluation of prevalent taxa (`getPrevalentAbundance`) and analysis focused on rare taxa (`getRareTaxa`, `subsetByRareTaxa`).
 
 
 ### Plotting prevalence
@@ -300,8 +299,8 @@ In addition, data can be rarefied with [subsampleCounts](https://microbiome.gith
 Samples might be contaminated with exogenous sequences. The impact of each contaminant can be estimated based on their frequencies and concentrations across the samples.
 
 The following [decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html) support such functionality:
-* isContaminant, isNotContaminant
-* addContaminantQC, addNotContaminantQC
+* `isContaminant`, `isNotContaminant`
+* `addContaminantQC`, `addNotContaminantQC`
 
 
 ## Session Info {-}
