Add bookdown references

--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -292,13 +292,13 @@ plotColData(tse,"sum","SampleType", colour_by = "SampleType") +
     theme(axis.text.x = element_text(angle = 45, hjust=1))
 ```
 
-In addition, data can be rarefied with [subsampleCounts](https://microbiome.github.io/mia/reference/subsampleCounts.html), which normalises the samples to an equal number of reads. However, this practice is discouraged for the analysis of differentially abundant microorganisms (see [McMurdie PJ, Holmes S](https://doi.org/10.1371/journal.pcbi.1003531)).
+In addition, data can be rarefied with [subsampleCounts](https://microbiome.github.io/mia/reference/subsampleCounts.html), which normalises the samples to an equal number of reads. However, this practice is discouraged for the analysis of differentially abundant microorganisms (see [@mcmurdie2014waste]).
   
 ### Contaminant sequences
 
 Samples might be contaminated with exogenous sequences. The impact of each contaminant can be estimated based on their frequencies and concentrations across the samples.
 
-The following [decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html) support such functionality:
+The following [decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html) are based on the [@davis2018simple] and support such functionality:
 * `isContaminant`, `isNotContaminant`
 * `addContaminantQC`, `addNotContaminantQC`
 
