Use internal cross reference

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -411,7 +411,7 @@ appropriate choice for comparing community compositions.
 
  - [How to extract information from clusters](http://bioconductor.org/books/release/OSCA/clustering.html)
 
- - [Community typing](15-microbiome-community.md)
+ - Chapter \@ref(community-typing) on community typing
 
 
 ## Session Info {-}
