Introduce section on Faith index

--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -199,6 +199,26 @@ tse <- mia::estimateDiversity(tse,
 head(colData(tse)$log_modulo_skewness)
 ```
 
+### Faith phylogenetic diversity
+
+Unlike other indices, the Faith index is not based on the richness and/or evenness of a community. Instead, it measures the alpha diversity by the aid of the phylogenetic distance among species. It is returned by the function `estimateFaith`.
+
+```{r}
+tse <- mia::estimateFaith(tse,
+                          abund_values = "counts")
+```
+
+**Note**: because `tse` is a `TreeSummarizedExperiment` object, its phylogenetic tree is used by default. However, the optional argument `tree` must be provided if `tse` does not contain one.
+
+Below a visual comparison between shannon and faith indices is shown with a violin plot.
+
+```{r}
+plots <- lapply(c("shannon", "faith"),
+                plotColData,
+                object = tse)
+ggpubr::ggarrange(plotlist = plots, nrow = 1, ncol = 2)
+```
+
 
 ## Visualization
 
